feat: mobile question card

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,13 @@ body {
   position: relative;
 }
 
+.wrapper-card-mobile {
+  height: calc(100vh - 250px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .wrapper-result {
   height: calc(100vh - 250px);
   display: flex;
